(Format: Year/Month/Day)
Changes for 0.9.9:
*04/01/30:
  * Tidy up a few slitlist things (Simon)
    - expand ~, trim spaces, allow comments, use WM_CLASS instead of NAME
    - should make it use regexp like remember sometime
    Slit.cc Xutil.hh/cc
*04/01/23:
  * Fix a few window frame issues when changing styles (Simon)
    - particularly a "void" area of the window
    Window.hh/cc FbWinFrame.cc
*04/01/22:
  * Fix missing sanitycheck in fbsetbg (Thanks Tom Ryan)
    fbsetbg
*04/01/21:
  * Added more international keywords and     (Thanks Antonio Gomez)
    Portuguese locales for fluxbox-generate_menu.in 
  * Added automatic reload of the new menu in   (Han)
    fluxbox-generate_menu
  * Fixed window size bug (Henrik)
    FbWinFrame::hideHandle and hideTitlebar could've
    caused window to have negative size
    FbWinFrame.cc    
  * Fixed cursor bug in fbrun (Thanks Mathias Gumz (gumz<at>cs.uni-magdeburg.de))
    TextBox.cc
  * Added support for:             (Henrik)
    _NET_WM_WINDOW_TYPE
    _NET_WM_WINDOW_TYPE_DOCK
    Ewmh.hh/cc
  * Fixed so one can navigate in menu even if     (Henrik)
    numlock, capslock or scrollock are on
    Menu.cc
*04/01/19:
  * Fixed minor bug in ResourceManager (Henrik)
    Resource.cc
  * Support for:                   (Henrik)
    _NET_WM_STATE_ABOVE
    _NET_WM_STATE_BELOW
    _NET_WM_CLIENT_LIST_STACKING
    _NET_WM_DESKTOP_VIEWPORT
    _NET_WM_DESKTOP_GEOMETRY
    _NET_WORKAREA
    _NET_ACTIVE_WINDOW
    Ewmh.cc
  * Fixed minor bugs in Ewmh,   (Henrik)
    The gnome-panel should now be working with window list and workspaces
    Ewmh.cc
*04/01/18:
  * Fixed snap to max screen area instead of real screen area (Henrik)
    Window.cc
  * Support for _NET_WM_STATE_HIDDEN and _NET_WM_STATE_SKIP_TASKBAR (Henrik)
    Window.cc/hh, Ewmh.hh/cc
  * Fixed mplayer xvid vo bug (Henrik)
    It now finds correct screen to create window on
    fluxbox.cc
*04/01/17:
  * Enter nls/pl_PL into configure.in and add a Makefile.am to pl_PL.